--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,15 @@
 body {
   height: 300vh;
 }
-
+.bg-color {
+  background-color: #3d3241;
+}
+.border-color {
+  border: 2px solid#DCC1B0;
+}
 /* NavBar */
 #NavBar {
-  background-color: blue;
+  background-color: #847072;
   overflow: hidden;
 }
 
